--- a/src/pages/solicitudes/solbuscar/solbuscar.scss
+++ b/src/pages/solicitudes/solbuscar/solbuscar.scss
@@ -1,11 +1,11 @@
-page-buscarcliente {
+page-solbuscar {
 
 .texto_in{
 	
 	//height: 18px;
 	//font-weight: bold;
 	outline-color: #cddc39;
-	color: #cddc39
+	color: #fff;
 
 
 }	
