--- a/src/pages/clientes/clientes.scss
+++ b/src/pages/clientes/clientes.scss
@@ -1,3 +1,13 @@
 page-clientes {
 
+.fondo{
+background-image: url('../assets/img/corpo.jpg');	
+background-repeat: no-repeat;
+//background-size: 80% ;
+background-attachment: fixed;
+background-position: 20% 20%;
+
+
+}	
+
 }
