--- a/src/pages/solicitudes/solicitudes.scss
+++ b/src/pages/solicitudes/solicitudes.scss
@@ -1,3 +1,17 @@
 page-solicitudes {
 
+.fondo{
+background-image: url('../assets/img/corpo2.jpg');	
+background-repeat: no-repeat;
+//background-size: 80% ;
+background-attachment: fixed;
+background-position: 20% 99%;
+}
+.cards{
+background:   #795548;
+
+
+}
+
+
 }
