--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,6 +31,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
+  errorBlue:  #000082,
   primary-color-dark:   #5D4037,
   primary-color:        #795548,
   primary-color-light:  #D7CCC8,
