--- a/src/pages/prestamos/prestamos.scss
+++ b/src/pages/prestamos/prestamos.scss
@@ -20,7 +20,7 @@ background-color: #000082;
     font-weight: bold;
     background-color:transparent;
 
-    color: #c6ff00;
+    color: #f53d3d;
     //font-family:  'Poppins', sans-serif;
     font-family: 'Press Start 2P', sans-serif;
   }
